tests/security/taintOnPregReplaceCall/output.txt
ERROR: TaintedData - input.hack:19:14 - Detected tainted HTML tags